# python_boto3_demo

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
python_boto3_demo/: app.py
python_boto3_demo/ec2_utils/: remove_ssm_policy.py
python_boto3_demo/rds_utils/: remove_public_access.py
python_boto3_demo/s3_utils/: remove_public_access.py
tests/ec2_utils/: test_remove_ssm_policy.py
tests/rds_utils/: test_remove_public_access.py
tests/s3_utils/: test_remove_public_access.py
